--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
         <div
           class="description-work"
           data-aos="fade-right"
-          data-aos-duration="3000"
+          data-aos-duration="2000"
         >
           <h2>Minesweeper</h2>
           <div class="skills-project">
@@ -124,7 +124,7 @@
       <div class="container-work">
         <div class="video-work">
           <a href="https://nblogo.netlify.app/">
-            <video autoplay loop muted>
+            <video autoplay loop muted playsinline>
               *
               <source src="./images/logo.mp4" type="video/mp4" />
             </video>
@@ -133,7 +133,7 @@
         <div
           class="description-work"
           data-aos="fade-right"
-          data-aos-duration="3000"
+          data-aos-duration="2000"
         >
           <h2>NB Logo</h2>
           <div class="skills-project">
