--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nicolas Salacroup</title>
+    <title>Nicolas Becharat</title>
     <script
       src="https://kit.fontawesome.com/d67384fb0f.js"
       crossorigin="anonymous"
@@ -17,10 +17,10 @@
     <div class="nav">
       <div class="wrapper">
         <div class="navbar-center">
-          <a href="#">Nicolas Salacroup</a>
+          <a href="#">Nicolas Becharat</a>
         </div>
         <div class="navbar-right">
-          <a href="#">info</a>
+          <a href="#">about me</a>
         </div>
         <div class="navbar-left">
           <a href="#work">work</a>
@@ -65,7 +65,7 @@
       <div class="container-work">
         <div class="image-work">
           <a href="https://my3droom.netlify.app">
-            <img src="./images/render1.png" />
+            <img src="./images/render1.png" alt="3droom-render"/>
           </a>
         </div>
         <div
@@ -96,7 +96,7 @@
       <div class="container-work">
         <div class="image-work">
           <a href="https://github.com/justniicolas/Minesweeper"
-            ><img src="./images/minesweeper.png"
+            ><img src="./images/minesweeper.png" alt="Minesweeper"
           /></a>
         </div>
         <div
@@ -125,8 +125,7 @@
         <div class="video-work">
           <a href="https://nblogo.netlify.app/">
             <video autoplay loop muted playsinline>
-              *
-              <source src="./images/logo.mp4" type="video/mp4" />
+              <source src="./images/logo.mp4" type="video/mp4"/>
             </video>
           </a>
         </div>
@@ -154,11 +153,26 @@
         </div>
       </div>
     </section>
+    <section class="aboutme-page-section">
+      <div class="container-aboutme">
+        <div class="aboutme-picture">
+          <img src="/src/images/78233186.jpg" alt="Profil Picture"/>
+        </div>
+        <div class="aboutme-description">
+          <div class="aboutme-title">
+            <h2></h2>
+          </div>
+          <div class="aboutme-description">
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
       var typed = new Typed(".multiText", {
-        strings: ["French", "a Developer", "a Student", "Nicolas Salacroup"],
+        strings: ["French", "a Developer", "a Student", "Nicolas Becharat"],
         typeSpeed: 250,
         backSpeed: 100,
         loop: false,
