--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           <a href="#">Nicolas Becharat</a>
         </div>
         <div class="navbar-right">
-          <a href="#">about me</a>
+          <a href="#aboutme">about me</a>
         </div>
         <div class="navbar-left">
           <a href="#work">work</a>
@@ -153,6 +153,7 @@
         </div>
       </div>
     </section>
+    <div id="aboutme"></div>
     <section class="aboutme-page-section">
       <div class="container-aboutme">
         <div class="aboutme-picture">
