--- a/src/index.html
+++ b/src/index.html
@@ -1,187 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nicolas Becharat</title>
-    <script
-      src="https://kit.fontawesome.com/d67384fb0f.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="icon" type="image/png" href="/src/images/logo.png" />
-  </head>
-  <body>
-    <canvas class="webgl"></canvas>
 
-    <div class="nav">
-      <div class="wrapper">
-        <div class="navbar-center">
-          <a href="#">Nicolas Becharat</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nicolas Becharat</title>
+  <script src="https://kit.fontawesome.com/d67384fb0f.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="icon" type="image/png" href="/src/images/logo.png" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+</head>
+
+<body>
+  <canvas class="webgl"></canvas>
+
+  <div class="nav">
+    <div class="wrapper">
+      <div class="navbar-center">
+        <a href="#">Nicolas Becharat</a>
+      </div>
+      <div class="navbar-right">
+        <a href="#aboutme">about me</a>
+      </div>
+      <div class="navbar-left">
+        <a href="#work">work</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-social-icon">
+    <div class="social-media-icon">
+      <a href="https://github.com/justniicolas"><i class="fa-brands fa-github fa-l"></i></a>
+      <a href="https://www.instagram.com/nicolas.bcrat/"><i class="fa-brands fa-instagram fa-l"></i></a>
+      <a href="https://www.discordapp.com/users/997432418808115241"><i class="fa-brands fa-discord fa-l"></i></a>
+      <a href="https://www.linkedin.com/in/nicolas-salacroup"><i class="fa-brands fa-linkedin fa-l"></i></a>
+    </div>
+  </div>
+
+  <section class="home-page-section">
+    <div class="text-presentation" data-aos="fade-down" data-aos-duration="1500">
+      <p class="text-presentation-wout-anim">
+        I'm <span class="multiText"></span>
+      </p>
+    </div>
+  </section>
+  <div id="work">...</div>
+  <section class="work-page-section" data-aos="fade-right" data-aos-duration="2000">
+    <div class="container-work">
+      <div class="image-work">
+        <a href="https://my3droom.netlify.app">
+          <img src="./images/render1.png" alt="3droom-render" />
+        </a>
+      </div>
+      <div class="description-work" data-aos="fade-right" data-aos-duration="2000">
+        <h2>My 3D Room</h2>
+        <div class="skills-project">
+          <div class="skills-code-project1">
+            <p class="skill-code-project-txt">Blender</p>
+          </div>
+          <div class="skills-code-project2">
+            <p class="skill-code-project-txt">Threejs</p>
+          </div>
         </div>
-        <div class="navbar-right">
-          <a href="#aboutme">about me</a>
-        </div>
-        <div class="navbar-left">
-          <a href="#work">work</a>
+        <div class="projet-description">
+          <p>
+            This project made using Blender and ThreeJs allows to represent my
+            dream room in 3D on a website with interaction. This project
+            allowed me to learn the ThreeJs framework but also to learn how to
+            use the Blender software. Now it's time to discover my room.
+          </p>
         </div>
       </div>
     </div>
 
-    <div class="container-social-icon">
-      <div class="social-media-icon">
-        <a href="https://github.com/justniicolas"
-          ><i class="fa-brands fa-github fa-l"></i
-        ></a>
-        <a href="https://www.instagram.com/nicolas.bcrat/"
-          ><i class="fa-brands fa-instagram fa-l"></i
-        ></a>
-        <a href="https://www.discordapp.com/users/997432418808115241"
-          ><i class="fa-brands fa-discord fa-l"></i
-        ></a>
-        <a href="https://www.linkedin.com/in/nicolas-salacroup"
-          ><i class="fa-brands fa-linkedin fa-l"></i
-        ></a>
+    <div class="container-work">
+      <div class="image-work">
+        <a href="https://github.com/justniicolas/Minesweeper"><img src="./images/minesweeper.png"
+            alt="Minesweeper" /></a>
+      </div>
+      <div class="description-work" data-aos="fade-right" data-aos-duration="2000">
+        <h2>Minesweeper</h2>
+        <div class="skills-project">
+          <div class="skills-code-project">
+            <p class="skill-code-project-txt">Python</p>
+          </div>
+        </div>
+        <div class="projet-description">
+          <p>
+            This minesweeper game is a school project done during my Digital
+            Computer Science specialty. This game developed using the python
+            programming language will allow you to recreate the minesweeper
+            game by modifying various parameters such as the number of
+            bombs,...
+          </p>
+        </div>
       </div>
     </div>
+    <div class="container-work">
+      <div class="video-work">
+        <a href="https://nblogo.netlify.app/">
+          <video autoplay loop muted playsinline>
+            <source src="./images/logo.mp4" type="video/mp4" />
+          </video>
+        </a>
+      </div>
+      <div class="description-work" data-aos="fade-right" data-aos-duration="2000">
+        <h2>NB Logo</h2>
+        <div class="skills-project">
+          <div class="skills-code-project1">
+            <p class="skill-code-project-txt">Blender</p>
+          </div>
+          <div class="skills-code-project2">
+            <p class="skill-code-project-txt">ThreeJs</p>
+          </div>
+        </div>
+        <div class="projet-description">
+          <p>
+            This logo is made using Blender, Illustrator, Photoshop and
+            ThreeJs. It represnets my first and last name. Now, let's find out
+            what this logo can inspire us !
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div id="aboutme"></div>
+  <section class="aboutme-page-section">
+    <div class="container-aboutme">
+      <div class="aboutme-picture" data-aos="fade-right" data-aos-duration="2000">
+        <img src="/src/images/78233186.jpg" alt="Profil Picture" />
+      </div>
+      <div class="aboutme-description" data-aos="fade-left" data-aos-duration="2000">>
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <p>Paris
+              </p>
+            </div>
+            <div class="swiper-slide">
+              <p>17</p>
+            </div>
+            <div class="swiper-slide">
+              <p>HTML</p>
+            </div>
+            <div class="swiper-slide">
+              <p>CSS</p>
+            </div>
+            <div class="swiper-slide">
+              <p>THREEJS</p>
+            </div>
 
-    <section class="home-page-section">
-      <div
-        class="text-presentation"
-        data-aos="fade-down"
-        data-aos-duration="1500"
-      >
-        <p class="text-presentation-wout-anim">
-          I'm <span class="multiText"></span>
-        </p>
-      </div>
-    </section>
-    <div id="work">...</div>
-    <section
-      class="work-page-section"
-      data-aos="fade-right"
-      data-aos-duration="2000"
-    >
-      <div class="container-work">
-        <div class="image-work">
-          <a href="https://my3droom.netlify.app">
-            <img src="./images/render1.png" alt="3droom-render"/>
-          </a>
-        </div>
-        <div
-          class="description-work"
-          data-aos="fade-right"
-          data-aos-duration="2000"
-        >
-          <h2>My 3D Room</h2>
-          <div class="skills-project">
-            <div class="skills-code-project1">
-              <p class="skill-code-project-txt">Blender</p>
-            </div>
-            <div class="skills-code-project2">
-              <p class="skill-code-project-txt">Threejs</p>
-            </div>
-          </div>
-          <div class="projet-description">
-            <p>
-              This project made using Blender and ThreeJs allows to represent my
-              dream room in 3D on a website with interaction. This project
-              allowed me to learn the ThreeJs framework but also to learn how to
-              use the Blender software. Now it's time to discover my room.
-            </p>
-          </div>
-        </div>
-      </div>
 
-      <div class="container-work">
-        <div class="image-work">
-          <a href="https://github.com/justniicolas/Minesweeper"
-            ><img src="./images/minesweeper.png" alt="Minesweeper"
-          /></a>
-        </div>
-        <div
-          class="description-work"
-          data-aos="fade-right"
-          data-aos-duration="2000"
-        >
-          <h2>Minesweeper</h2>
-          <div class="skills-project">
-            <div class="skills-code-project">
-              <p class="skill-code-project-txt">Python</p>
-            </div>
           </div>
-          <div class="projet-description">
-            <p>
-              This minesweeper game is a school project done during my Digital
-              Computer Science specialty. This game developed using the python
-              programming language will allow you to recreate the minesweeper
-              game by modifying various parameters such as the number of
-              bombs,...
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="container-work">
-        <div class="video-work">
-          <a href="https://nblogo.netlify.app/">
-            <video autoplay loop muted playsinline>
-              <source src="./images/logo.mp4" type="video/mp4"/>
-            </video>
-          </a>
-        </div>
-        <div
-          class="description-work"
-          data-aos="fade-right"
-          data-aos-duration="2000"
-        >
-          <h2>NB Logo</h2>
-          <div class="skills-project">
-            <div class="skills-code-project1">
-              <p class="skill-code-project-txt">Blender</p>
-            </div>
-            <div class="skills-code-project2">
-              <p class="skill-code-project-txt">ThreeJs</p>
-            </div>
-          </div>
-          <div class="projet-description">
-            <p>
-              This logo is made using Blender, Illustrator, Photoshop and
-              ThreeJs. It represnets my first and last name. Now, let's find out
-              what this logo can inspire us !
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <div id="aboutme"></div>
-    <section class="aboutme-page-section">
-      <div class="container-aboutme">
-        <div class="aboutme-picture">
-          <img src="/src/images/78233186.jpg" alt="Profil Picture"/>
-        </div>
-        <div class="aboutme-description">
-          <div class="aboutme-title">
-            <h2></h2>
-          </div>
-          <div class="aboutme-description">
-            <p></p>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script>
-      var typed = new Typed(".multiText", {
-        strings: ["French", "a Developer", "a Student", "Nicolas Becharat"],
-        typeSpeed: 250,
-        backSpeed: 100,
-        loop: false,
-      });
-    </script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-  </body>
+        </div>
+        <p></p>
+      </div>
+    </div>
+    </div>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script>
+    var typed = new Typed(".multiText", {
+      strings: ["French", "a Developer", "a Student", "Nicolas Becharat"],
+      typeSpeed: 250,
+      backSpeed: 100,
+      loop: false,
+    });
+  </script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+</body>
+
 </html>
