--- a/src/index.html
+++ b/src/index.html
@@ -55,11 +55,11 @@
       <div class="description-work" data-aos="fade-right" data-aos-duration="2000">
         <h2>My 3D Room</h2>
         <div class="skills-project">
-          <div class="skills-code-project1">
-            <p class="skill-code-project-txt">Blender</p>
+          <div class="skills-code-project">
+            Blender
           </div>
-          <div class="skills-code-project2">
-            <p class="skill-code-project-txt">Threejs</p>
+          <div class="skills-code-project">
+            ThreeJs
           </div>
         </div>
         <div class="projet-description">
@@ -82,7 +82,7 @@
         <h2>Minesweeper</h2>
         <div class="skills-project">
           <div class="skills-code-project">
-            <p class="skill-code-project-txt">Python</p>
+            Python
           </div>
         </div>
         <div class="projet-description">
@@ -107,11 +107,11 @@
       <div class="description-work" data-aos="fade-right" data-aos-duration="2000">
         <h2>NB Logo</h2>
         <div class="skills-project">
-          <div class="skills-code-project1">
-            <p class="skill-code-project-txt">Blender</p>
+          <div class="skills-code-project">
+            Blender
           </div>
-          <div class="skills-code-project2">
-            <p class="skill-code-project-txt">ThreeJs</p>
+          <div class="skills-code-project">
+            ThreeJs
           </div>
         </div>
         <div class="projet-description">
