follow pointer add

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <canvas class="webgl"></canvas>
-
+  <div id="follower"></div>
   <div class="nav">
     <div class="wrapper">
       <div class="navbar-center">
@@ -149,14 +149,10 @@
             <div class="swiper-slide">
               <p>THREEJS</p>
             </div>
-
-
           </div>
-
+          <div class="swiper-pagination"></div>
         </div>
-        <p></p>
       </div>
-    </div>
     </div>
   </section>
 
