--- a/src/index.html
+++ b/src/index.html
@@ -54,11 +54,11 @@
       <div class="description-work" data-aos="fade-right" data-aos-duration="2000">
         <h2>My 3D Room</h2>
         <div class="skills-project">
-          <div class="skills-code-project">
-            Blender
+          <div class="skills-code-project1">
+            <p class="skill-code-project-txt">Blender</p>
           </div>
-          <div class="skills-code-project">
-            ThreeJs
+          <div class="skills-code-project2">
+            <p class="skill-code-project-txt">Threejs</p>
           </div>
         </div>
         <div class="projet-description">
@@ -81,7 +81,7 @@
         <h2>Minesweeper</h2>
         <div class="skills-project">
           <div class="skills-code-project">
-            Python
+            <p class="skill-code-project-txt">Python</p>
           </div>
         </div>
         <div class="projet-description">
@@ -106,11 +106,11 @@
       <div class="description-work" data-aos="fade-right" data-aos-duration="2000">
         <h2>NB Logo</h2>
         <div class="skills-project">
-          <div class="skills-code-project">
-            Blender
+          <div class="skills-code-project1">
+            <p class="skill-code-project-txt">Blender</p>
           </div>
-          <div class="skills-code-project">
-            ThreeJs
+          <div class="skills-code-project2">
+            <p class="skill-code-project-txt">ThreeJs</p>
           </div>
         </div>
         <div class="projet-description">
