--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 
 <body>
   <canvas class="webgl"></canvas>
+
   <div class="nav">
     <div class="wrapper">
       <div class="navbar-center">
@@ -148,10 +149,14 @@
             <div class="swiper-slide">
               <p>THREEJS</p>
             </div>
+
+
           </div>
-          <div class="swiper-pagination"></div>
+
         </div>
+        <p></p>
       </div>
+    </div>
     </div>
   </section>
 
