--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,21 @@
       <div class="aboutme-picture" data-aos="fade-right" data-aos-duration="2000">
         <img src="/src/images/78233186.jpg" alt="Profil Picture" />
       </div>
-      <div class="aboutme-description" data-aos="fade-left" data-aos-duration="2000">>
+      <div class="aboutme-description" data-aos="fade-left" data-aos-duration="2000">
+        <i class="fa-solid fa-angle-left"></i>
+        <div class="aboutme-description_caroussels">
+          <div class="aboutme-description_caroussel">
+            <div class="aboutme-description_caroussel_text">
+              <p>Python</p>
+            </div>
+          </div>
+          <div class="aboutme-description_caroussel">
+            <div class="aboutme-description_caroussel_text">
+              <p>Python</p>
+            </div>
+          </div>
+        </div>
+        <i class="fa-solid fa-angle-right"></i>
       </div>
     </div>
     </div>
