--- a/src/index.html
+++ b/src/index.html
@@ -55,11 +55,14 @@
       <div class="description-work" data-aos="fade-right" data-aos-duration="2000">
         <h2>My 3D Room</h2>
         <div class="skills-project">
-          <div class="skills-code-project1">
-            <p class="skill-code-project-txt">Blender</p>
+          <div class="skills-code-project-working">
+            In progress
           </div>
-          <div class="skills-code-project2">
-            <p class="skill-code-project-txt">Threejs</p>
+          <div class="skills-code-project">
+            Blender
+          </div>
+          <div class="skills-code-project">
+            Threejs
           </div>
         </div>
         <div class="projet-description">
@@ -82,7 +85,7 @@
         <h2>Minesweeper</h2>
         <div class="skills-project">
           <div class="skills-code-project">
-            <p class="skill-code-project-txt">Python</p>
+            Python
           </div>
         </div>
         <div class="projet-description">
@@ -107,11 +110,11 @@
       <div class="description-work" data-aos="fade-right" data-aos-duration="2000">
         <h2>NB Logo</h2>
         <div class="skills-project">
-          <div class="skills-code-project1">
-            <p class="skill-code-project-txt">Blender</p>
+          <div class="skills-code-project">
+            Blender
           </div>
-          <div class="skills-code-project2">
-            <p class="skill-code-project-txt">ThreeJs</p>
+          <div class="skills-code-project">
+            ThreeJs
           </div>
         </div>
         <div class="projet-description">
@@ -130,8 +133,13 @@
       <div class="aboutme-picture" data-aos="fade-right" data-aos-duration="2000">
         <img src="/src/images/78233186.jpg" alt="Profil Picture" />
       </div>
-      <div class="aboutme-description" data-aos="fade-left" data-aos-duration="2000">>
-      </div>
+      <div class="aboutme-description" data-aos="fade-left" data-aos-duration="2000">
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">You need a website ? Contact me on my social media !</div>
+            
+          </div>
+        </div>
     </div>
     </div>
   </section>
