--- a/src/index.html
+++ b/src/index.html
@@ -168,6 +168,21 @@
               <div class="swiper-slide">
                 You need a website ? Contact me on my social media !
               </div>
+              <div class="swiper-slide">
+                <img src="./images/pythonlogo.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./images/htmllogo.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./images/csslogo.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./images/javascriptlogo.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./images/threejslogo.png" alt="">
+              </div>
             </div>
           </div>
         </div>
