--- a/src/index.html
+++ b/src/index.html
@@ -69,9 +69,9 @@
     >
       <div class="container-work">
         <div class="image-work">
-          <a href="https://my3droom.netlify.app">
-            <img src="./images/render1.png" alt="3droom-render" />
-          </a>
+          <iframe src="https://my3droom.netlify.app"></iframe>
+            <!-- <img src="./images/render1.png" alt="3droom-render" />
+          </a> -->
         </div>
         <div
           class="description-work"
@@ -96,8 +96,8 @@
       </div>
       <div class="container-work">
         <div class="image-work">
-          <a href="https://github.com/justniicolas/Minesweeper"
-            ><img src="./images/minesweeper.png" alt="Minesweeper"
+          <a href="https://github.com/justniicolas/Minesweeper">
+          <img src="./images/minesweeper.png" alt="Minesweeper" 
           /></a>
         </div>
         <div
@@ -121,12 +121,8 @@
         </div>
       </div>
       <div class="container-work">
-        <div class="video-work">
-          <a href="https://nblogo.netlify.app/">
-            <video autoplay loop muted playsinline>
-              <source src="./images/logo.mp4" type="video/mp4" />
-            </video>
-          </a>
+        <div class="image-work">
+          <iframe src="https://nblogo.netlify.app/"></iframe> 
         </div>
         <div
           class="description-work"
@@ -153,7 +149,7 @@
       <div class="container-aboutme">
         <div
           class="aboutme-picture"
-          data-aos="fade-right"
+          data-aos="fade-left"
           data-aos-duration="2000"
         >
         <img src="./images/pictureprofil.png" alt="">
