--- a/src/index.html
+++ b/src/index.html
@@ -69,9 +69,9 @@
     >
       <div class="container-work">
         <div class="image-work">
-          <iframe src="https://my3droom.netlify.app"></iframe>
-            <!-- <img src="./images/render1.png" alt="3droom-render" />
-          </a> -->
+          <a href="https://my3droom.netlify.app">
+            <img src="./images/render1.png" alt="3droom-render" />
+          </a>
         </div>
         <div
           class="description-work"
