--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nicolas Becharat</title>
-    <link rel="icon" type="image/png" href="./images/logo.png"/>
+    <link rel="icon" type="image/png" href="./images/logo.png" />
     <link rel="stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/d67384fb0f.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -63,6 +63,38 @@
     </section>
     <div id="work">...</div>
     <section
+      class="repo-page-section"
+      data-aos="fade-right"
+      data-aos-duration="2000"
+    >
+      <div class="repo-container">
+        <div class="repository">
+          <h4>
+            <i class="fa-solid fa-book-bookmark"></i> portfolio-nicolasbecharat
+           <span class="status-repo">public</span>
+          </h4>
+          <p class="repo-description">
+            personal portfolio website showcasing my skills, projects, and
+            experience as a web developer
+          </p>
+          <i class="fa-regular fa-star"></i> 3
+        </div>
+        <div class="repository">
+          <h3>TITLE</h3>
+          <p>DESCRIPTION</p>
+        </div>
+        <div class="repository">
+          <h3>TITLE</h3>
+          <p>DESCRIPTION</p>
+        </div>
+        <div class="repository">
+          <h3>TITLE</h3>
+          <p>DESCRIPTION</p>
+        </div>
+      </div>
+    </section>
+
+    <section
       class="work-page-section"
       data-aos="fade-right"
       data-aos-duration="2000"
@@ -97,7 +129,7 @@
       <div class="container-work">
         <div class="image-work">
           <a href="https://github.com/justniicolas/Minesweeper">
-          <img src="./images/minesweeper.png" alt="Minesweeper" 
+            <img src="./images/minesweeper.png" alt="Minesweeper"
           /></a>
         </div>
         <div
@@ -122,7 +154,7 @@
       </div>
       <div class="container-work">
         <div class="image-work">
-          <iframe src="https://nblogo.netlify.app/"></iframe> 
+          <iframe src="https://nblogo.netlify.app/"></iframe>
         </div>
         <div
           class="description-work"
@@ -152,7 +184,7 @@
           data-aos="fade-left"
           data-aos-duration="2000"
         >
-        <img src="./images/pictureprofil.png" alt="">
+          <img src="./images/pictureprofil.png" alt="" />
         </div>
         <div
           class="aboutme-description"
@@ -165,19 +197,19 @@
                 You need a website ? Contact me on my social media !
               </div>
               <div class="swiper-slide">
-                <img src="./images/pythonlogo.png" alt="">
+                <img src="./images/pythonlogo.png" alt="" />
               </div>
               <div class="swiper-slide">
-                <img src="./images/htmllogo.png" alt="">
+                <img src="./images/htmllogo.png" alt="" />
               </div>
               <div class="swiper-slide">
-                <img src="./images/csslogo.png" alt="">
+                <img src="./images/csslogo.png" alt="" />
               </div>
               <div class="swiper-slide">
-                <img src="./images/javascriptlogo.png" alt="">
+                <img src="./images/javascriptlogo.png" alt="" />
               </div>
               <div class="swiper-slide">
-                <img src="./images/threejslogo.png" alt="">
+                <img src="./images/threejslogo.png" alt="" />
               </div>
             </div>
           </div>
