--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,8 @@
       <div class="repo-container">
         <div class="repository">
           <h4>
-            <i class="fa-solid fa-book-bookmark"></i> portfolio-nicolasbecharat
-           <span class="status-repo">public</span>
+            <i class="fa-solid fa-book-bookmark"></i> <a href= "https://github.com/justniicolas/portfolio-nicolasbecharat" target="_blank">portfolio-nicolasbecharat</a>
+            <span class="status-repo">public</span>
           </h4>
           <p class="repo-description">
             personal portfolio website showcasing my skills, projects, and
@@ -80,16 +80,50 @@
           <i class="fa-regular fa-star"></i> 3
         </div>
         <div class="repository">
-          <h3>TITLE</h3>
-          <p>DESCRIPTION</p>
+          <h4>
+            <i class="fa-solid fa-book-bookmark"></i>
+            <a href="https://github.com/justniicolas/IIM-DISCORD" target=”_blank”>
+              iim-discord-bot</a
+            >
+            <span class="status-repo">public</span>
+          </h4>
+          <p class="repo-description">
+            javaScript discord bot brings together the students from IIM digital
+            school into a single server
+          </p>
+
+          <i class="fa-regular fa-star"></i> 3
         </div>
         <div class="repository">
-          <h3>TITLE</h3>
-          <p>DESCRIPTION</p>
+          <h4>
+            <i class="fa-solid fa-book-bookmark"></i>
+            <a href="https://github.com/justniicolas/IIM-DISCORD" target=”_blank”>
+              iim-discord-bot</a
+            >
+            <span class="status-repo">public</span>
+          </h4>
+          
+          <p class="repo-description">
+            javaScript discord bot brings together the students from IIM digital
+            school into a single server
+          </p>
+
+          <i class="fa-regular fa-star"></i> 3
         </div>
         <div class="repository">
-          <h3>TITLE</h3>
-          <p>DESCRIPTION</p>
+          <h4>
+            <i class="fa-solid fa-book-bookmark"></i>
+            <a href="https://github.com/justniicolas/IIM-DISCORD" target=”_blank”>
+              iim-discord-bot</a
+            >
+            <span class="status-repo">public</span>
+          </h4>
+          <p class="repo-description">
+            javaScript discord bot brings together the students from IIM digital
+            school into a single server
+          </p>
+
+          <i class="fa-regular fa-star"></i> 3
         </div>
       </div>
     </section>
@@ -101,7 +135,7 @@
     >
       <div class="container-work">
         <div class="image-work">
-          <a href="https://my3droom.netlify.app">
+          <a href="https://my3droom.netlify.app" target=”_blank”>
             <img src="./images/render1.png" alt="3droom-render" />
           </a>
         </div>
@@ -128,7 +162,7 @@
       </div>
       <div class="container-work">
         <div class="image-work">
-          <a href="https://github.com/justniicolas/Minesweeper">
+          <a href="https://github.com/justniicolas/Minesweeper" target=”_blank”>
             <img src="./images/minesweeper.png" alt="Minesweeper"
           /></a>
         </div>
