--- a/src/index.html
+++ b/src/index.html
@@ -70,19 +70,26 @@
       <div class="repo-container">
         <div class="repository">
           <h4>
-            <i class="fa-solid fa-book-bookmark"></i> <a href= "https://github.com/justniicolas/portfolio-nicolasbecharat" target="_blank">portfolio-nicolasbecharat</a>
+            <i class="fa-solid fa-book-bookmark"></i>
+            <a
+              href="https://github.com/justniicolas/portfolio-nicolasbecharat"
+              target="_blank"
+              >portfolio-nicolasbecharat</a
+            >
             <span class="status-repo">public</span>
           </h4>
           <p class="repo-description">
             personal portfolio website showcasing my skills, projects, and
             experience as a web developer
           </p>
-          <i class="fa-regular fa-star"></i> 3
         </div>
         <div class="repository">
           <h4>
             <i class="fa-solid fa-book-bookmark"></i>
-            <a href="https://github.com/justniicolas/IIM-DISCORD" target=”_blank”>
+            <a
+              href="https://github.com/justniicolas/IIM-DISCORD"
+              target="”_blank”"
+            >
               iim-discord-bot</a
             >
             <span class="status-repo">public</span>
@@ -91,39 +98,37 @@
             javaScript discord bot brings together the students from IIM digital
             school into a single server
           </p>
-
-          <i class="fa-regular fa-star"></i> 3
         </div>
         <div class="repository">
           <h4>
             <i class="fa-solid fa-book-bookmark"></i>
-            <a href="https://github.com/justniicolas/IIM-DISCORD" target=”_blank”>
-              iim-discord-bot</a
+            <a
+              href="https://github.com/justniicolas/IIM-DISCORD"
+              target="”_blank”"
+            >
+              room_nb_portfolio</a
             >
             <span class="status-repo">public</span>
           </h4>
-          
-          <p class="repo-description">
-            javaScript discord bot brings together the students from IIM digital
-            school into a single server
-          </p>
 
-          <i class="fa-regular fa-star"></i> 3
+          <p class="repo-description">
+             blender and threejs allows to represent my dream room in 3D on a website with interaction 
+          </p>
         </div>
         <div class="repository">
           <h4>
             <i class="fa-solid fa-book-bookmark"></i>
-            <a href="https://github.com/justniicolas/IIM-DISCORD" target=”_blank”>
-              iim-discord-bot</a
+            <a
+              href="https://github.com/justniicolas/Template-Vite"
+              target="”_blank”"
+            >
+             template-vite</a
             >
             <span class="status-repo">public</span>
           </h4>
           <p class="repo-description">
-            javaScript discord bot brings together the students from IIM digital
-            school into a single server
+            using vitejs, this template allows you to create a web project in a few minutes
           </p>
-
-          <i class="fa-regular fa-star"></i> 3
         </div>
       </div>
     </section>
@@ -134,9 +139,10 @@
       data-aos-duration="2000"
     >
       <div class="container-work">
-        <div class="image-work">
-          <a href="https://my3droom.netlify.app" target=”_blank”>
-            <img src="./images/render1.png" alt="3droom-render" />
+        <div class="video-work">
+          <a href="" target="”_blank”">
+            <video autoplay="autoplay" muted="muted" loop="loop" playsinline="playsinline" preload="metadata" >
+              <source src="./images/0001-3000.mp4" type= "video/mp4" ></source></video>
           </a>
         </div>
         <div
@@ -144,25 +150,24 @@
           data-aos="fade-right"
           data-aos-duration="2000"
         >
-          <h2>My 3D Room</h2>
+          <h2>current project</h2>
           <div class="skills-project">
             <div class="skills-code-project-working">In progress</div>
             <div class="skills-code-project">Blender</div>
-            <div class="skills-code-project">Threejs</div>
           </div>
           <div class="projet-description">
             <p>
-              This project made using Blender and ThreeJs allows to represent my
-              dream room in 3D on a website with interaction. This project
-              allowed me to learn the ThreeJs framework but also to learn how to
-              use the Blender software. Now it's time to discover my room.
+              This projet is a personal project on which I am currently working on and will be revealed soon. This project requires a lot of knowledge in several fields, design, animation, 3D, ...
             </p>
           </div>
         </div>
       </div>
       <div class="container-work">
         <div class="image-work">
-          <a href="https://github.com/justniicolas/Minesweeper" target=”_blank”>
+          <a
+            href="https://github.com/justniicolas/Minesweeper"
+            target="”_blank”"
+          >
             <img src="./images/minesweeper.png" alt="Minesweeper"
           /></a>
         </div>
