--- a/src/index.html
+++ b/src/index.html
@@ -250,6 +250,9 @@
               <div class="swiper-slide">
                 <img src="./images/threejslogo.png" alt="" />
               </div>
+              <div class="swiper-slide">
+                <img src="./images/blenderlogo.png" alt="" />
+              </div>
             </div>
           </div>
         </div>
