--- a/src/index.html
+++ b/src/index.html
@@ -150,10 +150,11 @@
           data-aos="fade-right"
           data-aos-duration="2000"
         >
-          <h2>current project</h2>
+          <h2>UseFlow</h2>
           <div class="skills-project">
             <div class="skills-code-project-working">In progress</div>
             <div class="skills-code-project">Blender</div>
+            <div class="skills-code-project">Astro</div>
           </div>
           <div class="projet-description">
             <p>
